# tg_channel_parser

./: .gitignore  main.py  pyproject.toml  t.txt
TeleShowTracker/: __init__.py
config/: settings.py
core/: admin.py  dependencies.py  models.py
core/migrations/: 0001_initial.py
templates/: message_list.html
tg_messages/: apps.py
tg_messages/api_clients/: llm_client.py  telegram_parser.py
tg_messages/endpoints/: telegram_endpoints.py
tg_messages/managers/: message_manager.py
tg_messages/repositories/: message_repository.py
tg_messages/templates/: message_list.html
users/: endpoints.py  schemas.py  services.py
